parser/ATGparserParser.py
# Generated from parser/ATGparser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ATGparserParser ( Parser ):

    grammarFileName = "ATGparser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'$... primary input'", "'$... primary output'" ]

    symbolicNames = [ "<INVALID>", "PI", "PO", "END", "TYPE", "ID", "NEWLINE", 
                      "WS", "COMMENT", "ERROR" ]

    RULE_program = 0
    RULE_inputDecl = 1
    RULE_outputDecl = 2
    RULE_gateDecl = 3

    ruleNames =  [ "program", "inputDecl", "outputDecl", "gateDecl" ]

    EOF = Token.EOF
    PI=1
    PO=2
    END=3
    TYPE=4
    ID=5
    NEWLINE=6
    WS=7
    COMMENT=8
    ERROR=9

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ATGparserParser.EOF, 0)

        def inputDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ATGparserParser.InputDeclContext)
            else:
                return self.getTypedRuleContext(ATGparserParser.InputDeclContext,i)


        def outputDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ATGparserParser.OutputDeclContext)
            else:
                return self.getTypedRuleContext(ATGparserParser.OutputDeclContext,i)


        def gateDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ATGparserParser.GateDeclContext)
            else:
                return self.getTypedRuleContext(ATGparserParser.GateDeclContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ATGparserParser.NEWLINE)
            else:
                return self.getToken(ATGparserParser.NEWLINE, i)

        def END(self):
            return self.getToken(ATGparserParser.END, 0)

        def getRuleIndex(self):
            return ATGparserParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ATGparserParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5 or _la==6:
                self.state = 12
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 8
                    self.inputDecl()
                    pass

                elif la_ == 2:
                    self.state = 9
                    self.outputDecl()
                    pass

                elif la_ == 3:
                    self.state = 10
                    self.gateDecl()
                    pass

                elif la_ == 4:
                    self.state = 11
                    self.match(ATGparserParser.NEWLINE)
                    pass


                self.state = 16
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 18
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 17
                self.match(ATGparserParser.END)


            self.state = 20
            self.match(ATGparserParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ATGparserParser.ID, 0)

        def PI(self):
            return self.getToken(ATGparserParser.PI, 0)

        def NEWLINE(self):
            return self.getToken(ATGparserParser.NEWLINE, 0)

        def getRuleIndex(self):
            return ATGparserParser.RULE_inputDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputDecl" ):
                listener.enterInputDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputDecl" ):
                listener.exitInputDecl(self)




    def inputDecl(self):

        localctx = ATGparserParser.InputDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_inputDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(ATGparserParser.ID)
            self.state = 23
            self.match(ATGparserParser.PI)
            self.state = 24
            self.match(ATGparserParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutputDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ATGparserParser.ID, 0)

        def PO(self):
            return self.getToken(ATGparserParser.PO, 0)

        def NEWLINE(self):
            return self.getToken(ATGparserParser.NEWLINE, 0)

        def getRuleIndex(self):
            return ATGparserParser.RULE_outputDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOutputDecl" ):
                listener.enterOutputDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOutputDecl" ):
                listener.exitOutputDecl(self)




    def outputDecl(self):

        localctx = ATGparserParser.OutputDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_outputDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 26
            self.match(ATGparserParser.ID)
            self.state = 27
            self.match(ATGparserParser.PO)
            self.state = 28
            self.match(ATGparserParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GateDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.output = None # Token
            self.type_ = None # Token
            self._ID = None # Token
            self.inputs = list() # of Tokens

        def NEWLINE(self):
            return self.getToken(ATGparserParser.NEWLINE, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ATGparserParser.ID)
            else:
                return self.getToken(ATGparserParser.ID, i)

        def TYPE(self):
            return self.getToken(ATGparserParser.TYPE, 0)

        def getRuleIndex(self):
            return ATGparserParser.RULE_gateDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGateDecl" ):
                listener.enterGateDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGateDecl" ):
                listener.exitGateDecl(self)




    def gateDecl(self):

        localctx = ATGparserParser.GateDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_gateDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            localctx.output = self.match(ATGparserParser.ID)
            self.state = 31
            localctx.type_ = self.match(ATGparserParser.TYPE)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                localctx._ID = self.match(ATGparserParser.ID)
                localctx.inputs.append(localctx._ID)
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==5):
                    break

            self.state = 37
            self.match(ATGparserParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





